StgShqrpGraphic/GLenv/include/GLFW/glfw3.h

    
    typedef struct GLFWmonitor GLFWmonitor;
    typedef struct GLFWwindow GLFWwindow;
    typedef void (*GLFWerrorfun)(int error_code, const char* description);
    typedef void (*GLFWwindowposfun)(GLFWwindow* window, int xpos, int ypos);
    typedef void (*GLFWwindowsizefun)(GLFWwindow* window, int width, int height);
    typedef void (*GLFWwindowclosefun)(GLFWwindow* window);
    typedef void (*GLFWwindowrefreshfun)(GLFWwindow* window);
    typedef void (*GLFWwindowfocusfun)(GLFWwindow* window, int focused);
    typedef void (*GLFWwindowiconifyfun)(GLFWwindow* window, int iconified);
    typedef void (*GLFWwindowmaximizefun)(GLFWwindow* window, int maximized);
    typedef void (*GLFWmonitorfun)(GLFWmonitor* monitor, int event);
    typedef struct GLFWvidmode
    {
        int width;
        int height;
        int redBits;
        int greenBits;
        int blueBits;
        int refreshRate;
    } GLFWvidmode;
    typedef struct GLFWgammaramp
    {
        unsigned short* red;
        unsigned short* green;
        unsigned short* blue;
        unsigned int size;
    } GLFWgammaramp;
    typedef struct GLFWimage
    {
        int width;
        int height;
        unsigned char* pixels;
    } GLFWimage;
    GLFWAPI int glfwInit(void);
    GLFWAPI void glfwTerminate(void);
    GLFWAPI void glfwInitHint(int hint, int value);
    GLFWAPI void glfwGetVersion(int* major, int* minor, int* rev);
    GLFWAPI const char* glfwGetVersionString(void);
    GLFWAPI int glfwGetError(const char** description);
    GLFWAPI GLFWerrorfun glfwSetErrorCallback(GLFWerrorfun callback);
    GLFWAPI GLFWmonitor** glfwGetMonitors(int* count);
    GLFWAPI GLFWmonitor* glfwGetPrimaryMonitor(void);
    GLFWAPI void glfwGetMonitorPos(GLFWmonitor* monitor, int* xpos, int* ypos);
    GLFWAPI void glfwGetMonitorWorkarea(GLFWmonitor* monitor, int* xpos, int* ypos, int* width, int* height);
    GLFWAPI void glfwGetMonitorPhysicalSize(GLFWmonitor* monitor, int* widthMM, int* heightMM);
    GLFWAPI void glfwGetMonitorContentScale(GLFWmonitor* monitor, float* xscale, float* yscale);
    GLFWAPI const char* glfwGetMonitorName(GLFWmonitor* monitor);
    GLFWAPI void glfwSetMonitorUserPointer(GLFWmonitor* monitor, void* pointer);
    GLFWAPI void* glfwGetMonitorUserPointer(GLFWmonitor* monitor);
    GLFWAPI GLFWmonitorfun glfwSetMonitorCallback(GLFWmonitorfun callback);
    GLFWAPI const GLFWvidmode* glfwGetVideoModes(GLFWmonitor* monitor, int* count);
    GLFWAPI const GLFWvidmode* glfwGetVideoMode(GLFWmonitor* monitor);
    GLFWAPI void glfwSetGamma(GLFWmonitor* monitor, float gamma);
    GLFWAPI const GLFWgammaramp* glfwGetGammaRamp(GLFWmonitor* monitor);
    GLFWAPI void glfwSetGammaRamp(GLFWmonitor* monitor, const GLFWgammaramp* ramp);
    GLFWAPI void glfwDefaultWindowHints(void);
    GLFWAPI void glfwWindowHint(int hint, int value);
    GLFWAPI void glfwWindowHintString(int hint, const char* value);
    GLFWAPI GLFWwindow* glfwCreateWindow(int width, int height, const char* title, GLFWmonitor* monitor, GLFWwindow* share);
    GLFWAPI void glfwDestroyWindow(GLFWwindow* window);
    GLFWAPI int glfwWindowShouldClose(GLFWwindow* window);
    GLFWAPI void glfwSetWindowShouldClose(GLFWwindow* window, int value);
    GLFWAPI void glfwSetWindowTitle(GLFWwindow* window, const char* title);
    GLFWAPI void glfwSetWindowIcon(GLFWwindow* window, int count, const GLFWimage* images);
    GLFWAPI void glfwGetWindowPos(GLFWwindow* window, int* xpos, int* ypos);
    GLFWAPI void glfwSetWindowPos(GLFWwindow* window, int xpos, int ypos);
    GLFWAPI void glfwGetWindowSize(GLFWwindow* window, int* width, int* height);
    GLFWAPI void glfwSetWindowSizeLimits(GLFWwindow* window, int minwidth, int minheight, int maxwidth, int maxheight);
    GLFWAPI void glfwSetWindowAspectRatio(GLFWwindow* window, int numer, int denom);
    GLFWAPI void glfwSetWindowSize(GLFWwindow* window, int width, int height);
    GLFWAPI void glfwGetFramebufferSize(GLFWwindow* window, int* width, int* height);
    GLFWAPI void glfwGetWindowFrameSize(GLFWwindow* window, int* left, int* top, int* right, int* bottom);
    GLFWAPI void glfwGetWindowContentScale(GLFWwindow* window, float* xscale, float* yscale);
    GLFWAPI float glfwGetWindowOpacity(GLFWwindow* window);
    GLFWAPI void glfwSetWindowOpacity(GLFWwindow* window, float opacity);
    GLFWAPI void glfwIconifyWindow(GLFWwindow* window);
    GLFWAPI void glfwRestoreWindow(GLFWwindow* window);
    GLFWAPI void glfwMaximizeWindow(GLFWwindow* window);
    GLFWAPI void glfwShowWindow(GLFWwindow* window);
    GLFWAPI void glfwHideWindow(GLFWwindow* window);
    GLFWAPI void glfwFocusWindow(GLFWwindow* window);
    GLFWAPI void glfwRequestWindowAttention(GLFWwindow* window);
    GLFWAPI GLFWmonitor* glfwGetWindowMonitor(GLFWwindow* window);
    GLFWAPI void glfwSetWindowMonitor(GLFWwindow* window, GLFWmonitor* monitor, int xpos, int ypos, int width, int height, int refreshRate);
    GLFWAPI int glfwGetWindowAttrib(GLFWwindow* window, int attrib);
    GLFWAPI void glfwSetWindowAttrib(GLFWwindow* window, int attrib, int value);
    GLFWAPI void glfwSetWindowUserPointer(GLFWwindow* window, void* pointer);
    GLFWAPI void* glfwGetWindowUserPointer(GLFWwindow* window);
    GLFWAPI GLFWwindowposfun glfwSetWindowPosCallback(GLFWwindow* window, GLFWwindowposfun callback);
    GLFWAPI GLFWwindowsizefun glfwSetWindowSizeCallback(GLFWwindow* window, GLFWwindowsizefun callback);
    GLFWAPI GLFWwindowclosefun glfwSetWindowCloseCallback(GLFWwindow* window, GLFWwindowclosefun callback);
    GLFWAPI GLFWwindowrefreshfun glfwSetWindowRefreshCallback(GLFWwindow* window, GLFWwindowrefreshfun callback);
    GLFWAPI GLFWwindowfocusfun glfwSetWindowFocusCallback(GLFWwindow* window, GLFWwindowfocusfun callback);
    GLFWAPI GLFWwindowiconifyfun glfwSetWindowIconifyCallback(GLFWwindow* window, GLFWwindowiconifyfun callback);
    GLFWAPI GLFWwindowmaximizefun glfwSetWindowMaximizeCallback(GLFWwindow* window, GLFWwindowmaximizefun callback);